[gd_scene load_steps=7 format=3 uid="uid://hi7i0jns1fxu"]

[ext_resource type="Texture2D" uid="uid://b1a6ulnhl4opq" path="res://assets/HUD/box_background.png" id="1_3wq56"]
[ext_resource type="Script" path="res://scripts/level_select_menu.gd" id="1_bkh4o"]
[ext_resource type="Texture2D" uid="uid://x0e716blyoao" path="res://assets/HUD/Blank_button.png" id="2_c2bbc"]
[ext_resource type="Script" path="res://scripts/challenge_value.gd" id="4_tgkr2"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_5ffnt"]
bg_color = Color(0.858824, 0.501961, 0.0117647, 1)
border_width_left = 5
border_width_top = 5
border_width_right = 5
border_width_bottom = 5
border_color = Color(0.976471, 0.760784, 0.403922, 1)
border_blend = true
corner_radius_top_left = 9
corner_radius_top_right = 9
corner_radius_bottom_right = 9
corner_radius_bottom_left = 9

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_ykee5"]
bg_color = Color(0.87451, 0.658824, 0.364706, 1)
border_width_left = 5
border_width_top = 5
border_width_right = 5
border_width_bottom = 5
border_color = Color(0.909804, 0.776471, 0.611765, 1)
border_blend = true
corner_radius_top_left = 9
corner_radius_top_right = 9
corner_radius_bottom_right = 9
corner_radius_bottom_left = 9

[node name="LevelMenu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_bkh4o")

[node name="BackGround" type="TextureRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("1_3wq56")

[node name="LevelSelector" type="MarginContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 65
theme_override_constants/margin_top = 65
theme_override_constants/margin_right = 65
theme_override_constants/margin_bottom = 65

[node name="VBoxContainer" type="VBoxContainer" parent="LevelSelector"]
custom_minimum_size = Vector2(800, 0)
layout_mode = 2
size_flags_horizontal = 4

[node name="HBoxContainer" type="HBoxContainer" parent="LevelSelector/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
theme_override_constants/separation = 19

[node name="Level1Button" type="TextureButton" parent="LevelSelector/VBoxContainer/HBoxContainer"]
custom_minimum_size = Vector2(200, 200)
layout_mode = 2
size_flags_vertical = 4
texture_normal = ExtResource("2_c2bbc")
stretch_mode = 0

[node name="Label" type="Label" parent="LevelSelector/VBoxContainer/HBoxContainer/Level1Button"]
layout_mode = 1
anchors_preset = 14
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
offset_top = -21.0
offset_bottom = 21.0
grow_horizontal = 2
grow_vertical = 2
theme_override_font_sizes/font_size = 28
text = "Level 1"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Level2Button" type="TextureButton" parent="LevelSelector/VBoxContainer/HBoxContainer"]
custom_minimum_size = Vector2(200, 200)
layout_mode = 2
size_flags_vertical = 4
texture_normal = ExtResource("2_c2bbc")
stretch_mode = 0

[node name="Label" type="Label" parent="LevelSelector/VBoxContainer/HBoxContainer/Level2Button"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_font_sizes/font_size = 28
text = "Level 2"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Level3Button" type="TextureButton" parent="LevelSelector/VBoxContainer/HBoxContainer"]
custom_minimum_size = Vector2(200, 200)
layout_mode = 2
size_flags_vertical = 4
texture_normal = ExtResource("2_c2bbc")
stretch_mode = 0

[node name="Label" type="Label" parent="LevelSelector/VBoxContainer/HBoxContainer/Level3Button"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_font_sizes/font_size = 28
text = "Level 3"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Level4Button" type="TextureButton" parent="LevelSelector/VBoxContainer/HBoxContainer"]
custom_minimum_size = Vector2(200, 200)
layout_mode = 2
size_flags_vertical = 4
texture_normal = ExtResource("2_c2bbc")
stretch_mode = 0

[node name="Label" type="Label" parent="LevelSelector/VBoxContainer/HBoxContainer/Level4Button"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_font_sizes/font_size = 28
text = "Level 4"
horizontal_alignment = 1
vertical_alignment = 1

[node name="LevelSettings" type="MarginContainer" parent="."]
visible = false
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 65
theme_override_constants/margin_top = 65
theme_override_constants/margin_right = 65
theme_override_constants/margin_bottom = 65

[node name="VBoxContainer" type="VBoxContainer" parent="LevelSettings"]
layout_mode = 2

[node name="Label" type="Label" parent="LevelSettings/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 0
theme_override_font_sizes/font_size = 35
text = "Level Settings	"
horizontal_alignment = 1
vertical_alignment = 1

[node name="GoldReduction" type="HBoxContainer" parent="LevelSettings/VBoxContainer"]
custom_minimum_size = Vector2(100, 100)
layout_mode = 2
size_flags_vertical = 0
theme_override_constants/separation = 18
alignment = 1

[node name="Label" type="Label" parent="LevelSettings/VBoxContainer/GoldReduction"]
layout_mode = 2
size_flags_horizontal = 0
size_flags_vertical = 1
theme_override_font_sizes/font_size = 16
text = "Gold Reduction: "
horizontal_alignment = 1
vertical_alignment = 1

[node name="HSlider" type="HSlider" parent="LevelSettings/VBoxContainer/GoldReduction" groups=["challenge_slider"]]
custom_minimum_size = Vector2(300, 100)
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 1
max_value = 3.0

[node name="TextureRect" type="TextureRect" parent="LevelSettings/VBoxContainer/GoldReduction"]
custom_minimum_size = Vector2(100, 50)
layout_mode = 2
size_flags_horizontal = 2
size_flags_vertical = 4
texture = ExtResource("1_3wq56")

[node name="Label2" type="Label" parent="LevelSettings/VBoxContainer/GoldReduction/TextureRect"]
custom_minimum_size = Vector2(100, 100)
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 2
size_flags_vertical = 1
theme_override_font_sizes/font_size = 16
text = "0%"
horizontal_alignment = 1
vertical_alignment = 1
script = ExtResource("4_tgkr2")

[node name="EnemeyDamage" type="HBoxContainer" parent="LevelSettings/VBoxContainer"]
custom_minimum_size = Vector2(100, 100)
layout_mode = 2
size_flags_vertical = 0
theme_override_constants/separation = 18
alignment = 1

[node name="Label" type="Label" parent="LevelSettings/VBoxContainer/EnemeyDamage"]
layout_mode = 2
size_flags_horizontal = 0
size_flags_vertical = 1
theme_override_font_sizes/font_size = 16
text = "Enemy damage reduction: "
horizontal_alignment = 1
vertical_alignment = 1

[node name="HSlider" type="HSlider" parent="LevelSettings/VBoxContainer/EnemeyDamage" groups=["challenge_slider"]]
custom_minimum_size = Vector2(300, 100)
layout_mode = 2
size_flags_horizontal = 0
size_flags_vertical = 1
max_value = 3.0

[node name="TextureRect" type="TextureRect" parent="LevelSettings/VBoxContainer/EnemeyDamage"]
custom_minimum_size = Vector2(100, 50)
layout_mode = 2
size_flags_horizontal = 2
size_flags_vertical = 4
texture = ExtResource("1_3wq56")

[node name="Label2" type="Label" parent="LevelSettings/VBoxContainer/EnemeyDamage/TextureRect"]
custom_minimum_size = Vector2(100, 100)
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 2
size_flags_vertical = 1
theme_override_font_sizes/font_size = 16
text = "0%"
horizontal_alignment = 1
vertical_alignment = 1
script = ExtResource("4_tgkr2")
type = 1

[node name="WaveDelay" type="HBoxContainer" parent="LevelSettings/VBoxContainer"]
custom_minimum_size = Vector2(100, 100)
layout_mode = 2
size_flags_vertical = 0
theme_override_constants/separation = 18
alignment = 1

[node name="Label" type="Label" parent="LevelSettings/VBoxContainer/WaveDelay"]
layout_mode = 2
size_flags_horizontal = 0
size_flags_vertical = 1
theme_override_font_sizes/font_size = 16
text = "Wave delay: "
horizontal_alignment = 1
vertical_alignment = 1

[node name="HSlider" type="HSlider" parent="LevelSettings/VBoxContainer/WaveDelay" groups=["challenge_slider"]]
custom_minimum_size = Vector2(300, 100)
layout_mode = 2
size_flags_horizontal = 0
size_flags_vertical = 1
max_value = 3.0

[node name="TextureRect" type="TextureRect" parent="LevelSettings/VBoxContainer/WaveDelay"]
custom_minimum_size = Vector2(100, 50)
layout_mode = 2
size_flags_horizontal = 2
size_flags_vertical = 4
texture = ExtResource("1_3wq56")

[node name="Label2" type="Label" parent="LevelSettings/VBoxContainer/WaveDelay/TextureRect"]
custom_minimum_size = Vector2(100, 100)
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 2
size_flags_vertical = 1
theme_override_font_sizes/font_size = 16
text = "0%"
horizontal_alignment = 1
vertical_alignment = 1
script = ExtResource("4_tgkr2")
type = 2

[node name="HBoxContainer4" type="HBoxContainer" parent="LevelSettings/VBoxContainer"]
custom_minimum_size = Vector2(100, 100)
layout_mode = 2
size_flags_horizontal = 0
size_flags_vertical = 0
theme_override_constants/separation = 18
alignment = 1

[node name="CheckButton" type="CheckButton" parent="LevelSettings/VBoxContainer/HBoxContainer4" groups=["challenge_endless"]]
layout_mode = 2
size_flags_horizontal = 0
theme_override_constants/h_separation = 11
text = "Endless"
icon_alignment = 2

[node name="HBoxContainer5" type="HBoxContainer" parent="LevelSettings/VBoxContainer"]
custom_minimum_size = Vector2(100, 100)
layout_mode = 2
size_flags_vertical = 0
theme_override_constants/separation = 120
alignment = 1

[node name="PlayButton" type="TextureButton" parent="LevelSettings/VBoxContainer/HBoxContainer5"]
custom_minimum_size = Vector2(100, 75)
layout_mode = 2
size_flags_vertical = 4
texture_normal = ExtResource("1_3wq56")
stretch_mode = 0

[node name="Label" type="Label" parent="LevelSettings/VBoxContainer/HBoxContainer5/PlayButton"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_font_sizes/font_size = 33
text = "Play"
horizontal_alignment = 1
vertical_alignment = 1

[node name="ResetButton" type="TextureButton" parent="LevelSettings/VBoxContainer/HBoxContainer5"]
custom_minimum_size = Vector2(100, 75)
layout_mode = 2
size_flags_vertical = 4
texture_normal = ExtResource("1_3wq56")
stretch_mode = 0

[node name="Label" type="Label" parent="LevelSettings/VBoxContainer/HBoxContainer5/ResetButton"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_font_sizes/font_size = 33
text = "Reset"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Return" type="Button" parent="."]
process_mode = 3
layout_mode = 0
offset_left = 34.0
offset_top = 15.0
offset_right = 114.0
offset_bottom = 97.0
mouse_filter = 1
theme_override_font_sizes/font_size = 52
theme_override_styles/normal = SubResource("StyleBoxFlat_5ffnt")
theme_override_styles/hover = SubResource("StyleBoxFlat_ykee5")
text = "<"

[connection signal="pressed" from="LevelSelector/VBoxContainer/HBoxContainer/Level1Button" to="." method="_on_level_1_button_pressed"]
[connection signal="pressed" from="LevelSettings/VBoxContainer/HBoxContainer5/PlayButton" to="." method="_on_play_button_pressed"]
[connection signal="pressed" from="LevelSettings/VBoxContainer/HBoxContainer5/ResetButton" to="." method="_on_reset_button_pressed"]
[connection signal="pressed" from="Return" to="." method="_on_return_pressed"]
